Fix the contenteditable filename field not being editable on IE11
The solution here was to figure out that IE11 can't do contenteditable
on <td> elements but it can do it on divs. So I throw a div inside the
filename <td> that's contenteditable which appears to work across
browsers. Tested with Chrome/Firefox/Safari on Mac, Edge and IE11 on
Windows 10.

Closes #52

--- a/metacatui/src/main/webapp/css/metacatui-common.css
+++ b/metacatui/src/main/webapp/css/metacatui-common.css
@@ -2975,6 +2975,10 @@ ul.side-nav-items {
     white-space: nowrap;
 }
 
+.data-package-item td.name div {
+	padding: 8px 0 8px 0;
+}
+
 /* Editor package table column 1 */
 .data-package-item td:first-of-type {
 	padding-left: 20px;
